<resources>
    <string name="app_name">CaseStudy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="legendText">Legend Text</string>
    <string name="playSoundFile">Play Sound File</string>
    <string name="start">Start</string>
    <string name="returnToMainMenu">Return to Main Menu</string>
    <string name="repeat">Repeat</string>
    <string name="title_activity_slideshow">SlideshowActivity</string>
    <string name="title_activity_slideshow_buttons">SlideshowButtonsActivity</string>
    <string name="mainMenuTitle">Main Menu</string>
    <string name="databaseBtn">Soccer Database</string>
    <string name="slideShowBtn">Slideshow</string>
    <string name="messengerBtn">Messenger</string>
    <string name="animationBtn">Animation</string>
    <string name="exitBtn">Exit</string>
    <string name="image">image</string>
</resources>
