<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenu"
    android:id="@+id/mainMenuLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuTitle"
        android:id="@+id/mainMenuTitle"
        android:layout_marginTop="39dp"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/databaseBtn"
        android:id="@+id/databaseBtn"
        android:layout_below="@+id/mainMenuTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:width="180dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slideShowBtn"
        android:id="@+id/slideShowBtn"
        android:layout_below="@+id/databaseBtn"
        android:layout_centerHorizontal="true"
        android:width="180dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messengerBtn"
        android:id="@+id/messengerBtn"
        android:layout_below="@+id/slideShowBtn"
        android:layout_centerHorizontal="true"
        android:width="180dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animationBtn"
        android:id="@+id/animationBtn"
        android:layout_below="@+id/messengerBtn"
        android:layout_centerHorizontal="true"
        android:width="180dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitBtn"
        android:id="@+id/exitBtn"
        android:layout_below="@+id/animationBtn"
        android:layout_centerHorizontal="true"
        android:width="180dp" />
</RelativeLayout>
